Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <meta charset="utf-8">
 <html> <head>
 <title>2014 Election Analysis</title>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXMZ722Q6J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XXMZ722Q6J');
+</script>
 </head>
 
 <body>
