--- a/nzfirst_votes.html
+++ b/nzfirst_votes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<head>
 <title>Hexagonal Map of NZ General Election NZ First Party Votes 2014</title>
 <style>
 .hexagon {
@@ -28,6 +29,16 @@
 }
 
 </style>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXMZ722Q6J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XXMZ722Q6J');
+</script>
+</head>
 <body>
 <script src="cdn/d3.v3.min.js"></script>
 <script src="cdn/d3.hexbin.v0.min.js?5c6e4f0"></script>
